# build

./: .gitignore  OAT.xml  README_zh.md  auto_install_whitelist.json  bundle.json  common.gni  compile_env_allowlist.json  compile_standard_whitelist.json  component_compilation_whitelist.json  component_feature_whitelist.json  cropping_allow_list.json  gn_helpers.py  indep_component_whitelist.json  ninja  ohos.gni  ohos_var.gni  prebuilts_config.json  prebuilts_config.py  prebuilts_config.sh  prebuilts_download.py  prebuilts_download.sh  prebuilts_download_config.json  print_python_deps.py  sensitive_info_config.json  subsystem_compoents_whitelist.json  subsystem_components_whitelist.json  subsystem_config.json  system_arm64e_whitelist.json  test.gni  third_party_allow_list.json  version.gni  x86_64-w64-mingw32-clang
.gitcode/: oh-gc-config.json
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
build_scripts/: build.py  build.sh  build_ohos_sdk.sh  env_setup.sh
common/: BUILD.gn  bundle.json
common/asan/: BUILD.gn  asan.cfg  asan.options  asan_helper.c  build_mixed_asan.sh  tsan.options
common/libcpp/: BUILD.gn
common/musl/: BUILD.gn  ld-musl-arm.path  ld-musl-riscv64.path
common/ubsan/: BUILD.gn  ubsan.cfg
config/: BUILD.gn  BUILDCONFIG.gn  sysroot.gni
config/clang/: clang.gni
config/components/ace_engine/: ace_gen_obj.gni
config/posix/: BUILD.gn
core/gn/: BUILD.gn  dotfile.gn  ohos_exec_script_allowlist.gni
dfx/: __init__.py  build_trace_handler.py  build_trace_log.py  build_trace_uploader.py  build_tracker.py  crypto_utils.py  dfx_config.json  dfx_config_manager.py  trace_log_request.template
docs/: build_rules_map.md  bundle.json条件编译配置指导.md  cflags系列参数使用指导.md  cmake转gn指导文档.md  compilation-and-build-rules.md  docs仓编译构建指导文档目录.md  how to use CMake with NDK.md  how-to-add-a-build-parameter.md  how-to-build-a-hap.md  how-to-build-linux-arm64-sdk.md  product-configuration.md  python3脚本优化.md  开源软件Notice收集策略说明.md  标准系统如何修改镜像文件的打包参数.md  标准系统如何添加一个模块.md  生成开源软件包.md  编译指导文档.md  编译构建调试文档.md  编译选项规范.md  编译配置指导文档.md  部件化编译最佳实践.md  部件独立编译使用指南.md
hb/: README.md  README_zh.md  main.py  setup.py
indep_configs/: README_zh.md  build_indep.sh  dotfile.gn
lite/: BUILD.gn  build_ext_components.py  copy_files.py  gen_module_notice_file.py  hap_pack.py  lite_target_list.gni  ohos_var.gni  utils.py
lite/components/: communication.json
lite/config/: BUILD.gn  BUILDCONFIG.gn
lite/config/component/: lite_component.gni
lite/config/subsystem/aafwk/: config.gni
lite/config/subsystem/graphic/: config.gni
lite/config/test/: test.gni
lite/make_rootfs/: rootfsimg_linux.sh
lite/ndk/: BUILD.gn  archive_ndk.py
lite/testfwk/: gen_testfwk_info.py  lite_testcase_resource_copy.py
lite/toolchain/: clang.gni
ohos/: copy_files.py  file_exists.py  generate_part_info.py  ohos_kits.gni  ohos_part.gni  write_kits_description.py
ohos/cli/: __init__.py  cli_profile.py  cli_profile.pydeps  copy_module_info.py  copy_module_info.pydeps  ohos_cli_executable.gni
ohos/cli/cli_info_process/: __init__.py  validate_cli_config.py  validate_cli_config.pydeps  validation_loader.py  validation_model.py  validation_rules.py  validation_schema.py
ohos/idlize/: arkts_idlize.gni
ohos/images/: BUILD.gn  adlt_wrapper.py  build_image.py  get_module_install_dest.py
ohos/images/mkimage/: chip_ckm.txt  dac.txt  imkcovert.py  judge_updater_image.py  mkchip_ckm.py  mkcpioimage.py  mkextimage.py  mkf2fsimage.py  mkimages.py  mkvendor_delm.py  system_image_conf.txt  userdata_image_conf.txt  vendor_delm.txt
ohos/images/mkimage/asan/: userdata_image_conf.txt
ohos/images/mkimage/asan/debug/: userdata_image_conf.txt
ohos/ndk/: BUILD.gn  archive_ndk.py  check_ndk_header.py  check_ndk_header_signature.py  collect_ndk_syscap.py  copy_notices_file.py  generate_ndk_docs.py  generate_ndk_stub_file.py  generate_version_script.py  ndk.gni  ndk_targets.gni  scan_ndk_targets.py
ohos/ndk/cmake/: ohos.toolchain.cmake
ohos/sdk/: BUILD.gn  add_notice_file.py  check_sdk_completeness.py  convert_permissions.py  copy_sdk_modules.py  generate_all_types_sdk.py  generate_hap_build_sdk_config.py  ohos_sdk_description_std.json  parse_description.py  parse_interface_sdk.py  parse_public_sdk.py  parse_sdk_description.py  remove_cangjie_ohos_sdk_config.py  sdk.gni  sdk_delivery_list.json
ohos/taihe_idl/: taihe.gni  taihe_args.gni  taihe_retry.sh  unpack.py
prebuilts_service/: README_zh.md  common_utils.py  config_parser.py  download_util.py  main.py  operater.py  parse_part_download_config.py  part_prebuilts_config.json  part_prebuilts_config.py  pool_downloader.py
rust/: BUILD.gn  rustc_toolchain.gni
sandbox/: sandbox.gni  sandbox.sh  sandbox_metadata.gni
scripts/: app_config.json  app_sign.py  arkts_idlize.py  asan_backup.py  bpf.py  build_js_assets.py  build_package_list.json  build_target_handler.py  cargo2gn.py  check_file_exist.py  check_hvigor_hap.py  check_linux_cpu.py  check_mac_system_and_cpu.py  code_release.py  collect_publicity.py  compile_app.py  compile_resources.py  copy_ex.py  dir_exists.py  download_sdk.py  entry.py  gen_sdk_build_file.py  gen_subsystem_ebpf_testcase_config.py  hapbuilder.py  (+23 more)
templates/abc/: ohos_abc.gni
templates/cangjie/: cj_compiler.gni  cjc.gni  cjc_toolchain.gni  cjc_wrapper.py
templates/common/: check_build_target.py  check_deps_handler.py  check_external_deps.py  check_part_subsystem_name.py  check_target.gni  collect_target.gni  copy.gni  delete_symbol.py  external_deps_handler.py  generate_component_package.py  include_relative_path_check.py  inclue_relative_path_check.py
templates/cxx/: ani.versionscript  cxx.gni  napi.versionscript  prebuilt.gni
templates/kernel/: Makefile  make_ko.sh  ohos_kernel_build.gni
templates/kernel/linux-5.10/: Makefile  make_ko.sh
templates/kernel/linux-6.6/: Makefile  make_ko.sh
templates/rust/: ohos_cargo_crate.gni  ohos_rust_library.gni  run_build_script.py  rust_bindgen.gni  rust_bindgen.py  rust_cxx.gni  rust_target_lints.gni  rust_template.gni
toolchain/mingw/: BUILD.gn
toolchain/ohos/: BUILD.gn  ohos_toolchain.gni
(+377 files in other folders)
