# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (use_sandbox) {
  if (!defined(build_ext_path)) {
    import("//build/sandbox/sandbox_metadata.gni")
  } else {
    import("${build_ext_path}/sandbox/sandbox_metadata.gni")
  }

  assert(defined(sandbox_config), "must defined sandbox_config")
  assert(defined(sandbox_config.no_sandbox_script_list),
         "must defined sandbox_config.no_sandbox_script_list")
  assert(sandbox_config.sandbox_script != "",
         "must set sandbox_config.sandbox_script")
}
