# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (is_ohos) {
  import("//build/config/ohos/config.gni")
  import("//build/ohos.gni")
  group("ubsan") {
    deps = [
      ":libclang_rt.ubsan_minimal.so",
      ":libclang_rt.ubsan_standalone.so",
      ":ubsan.cfg",
    ]
  }

  ohos_prebuilt_etc("ubsan.cfg") {
    source = "ubsan.cfg"
    module_install_dir = "etc/init/"
    subsystem_name = "build"
    part_name = "build_framework"
  }

  ohos_prebuilt_shared_library("libclang_rt.ubsan_standalone.so") {
    enable_strip = true
    mini_debug = true
    source =
        "${clang_lib_base_path}/${abi_target}/libclang_rt.ubsan_standalone.so"
    install_images = [
      "system",
      "updater",
    ]
    innerapi_tags = [
      "platformsdk",
      "chipsetsdk",
    ]
    deps = [ ":ubsan_standalone_unstripped_copy" ]
    subsystem_name = "build"
    part_name = "build_framework"
  }

  ohos_prebuilt_shared_library("libclang_rt.ubsan_minimal.so") {
    enable_strip = true
    mini_debug = true
    source = "${clang_lib_base_path}/${abi_target}/libclang_rt.ubsan_minimal.so"
    install_images = [
      "system",
      "updater",
    ]
    deps = [ ":ubsan_minimal_unstripped_copy" ]
    innerapi_tags = [
      "platformsdk",
      "chipsetsdk",
    ]
    subsystem_name = "build"
    part_name = "build_framework"
  }
}

copy("ubsan_standalone_unstripped_copy") {
  sources =
      [ "${clang_lib_base_path}/${abi_target}/libclang_rt.ubsan_standalone.so" ]
  outputs = [ root_out_dir + "/lib.unstripped/clang/{{source_file_part}}" ]
}

copy("ubsan_minimal_unstripped_copy") {
  sources =
      [ "${clang_lib_base_path}/${abi_target}/libclang_rt.ubsan_minimal.so" ]
  outputs = [ root_out_dir + "/lib.unstripped/clang/{{source_file_part}}" ]
}
