# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/toolchain.gni")

declare_args() {
  toolchains_dir = "//prebuilts/clang/ohos"
}
if (!is_llvm_build) {
  default_clang_base_path = "${toolchains_dir}/${host_platform_dir}/llvm"
  clang_lib_path = "${toolchains_dir}/${host_platform_dir}/llvm/lib/clang/${clang_version}/lib"
} else {
  #default_clang_base_path = "//out/llvm-install"
  #clang_lib_path = "//out/llvm-install/lib/clang/${clang_version}/lib"
  default_clang_base_path = "//prebuilts/clang/ohos/linux-x86_64/clang-15.0.4"
  clang_lib_path = "//prebuilts/clang/ohos/linux-x86_64/clang-15.0.4/lib/clang/15.0.4/lib"
}

declare_args() {
  # Indicates if the build should use the Chrome-specific plugins for enforcing
  # coding guidelines, etc. Only used when compiling with Clang.
  #clang_use_chrome_plugins = is_clang && !is_nacl && !use_xcode_clang
  clang_use_chrome_plugins = false

  clang_base_path = default_clang_base_path

  clang_lib_base_path = clang_lib_path

  clang_stl_path = "${toolchains_dir}/${host_platform_dir}/libcxx-ndk/lib"
}
